Made parallax more subtle, added links to the hero calls to action

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae recusandae voluptate iure inventore minima debitis voluptatem nulla possimus veritatis natus.</p>
       </div>
       <div class="btn-content wrapper flex">
-        <a href="#" class="btn btn--darkgreen">Portfolio</a>
-        <a href="#" class="btn btn--lightgreen">About Me</a>
+        <a href="#portfolio" class="btn btn--darkgreen">Portfolio</a>
+        <a href="#about" class="btn btn--lightgreen">About Me</a>
       </div>
     </div>
   </section>
