Portfolio section added. TODO: Hover effect on portfolio cards. Fancy design animations?

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae recusandae voluptate iure inventore minima debitis voluptatem nulla possimus veritatis natus.</p>
       </div>
       <div class="btn-content wrapper flex">
-        <a href="#portfolio" class="btn btn--darkgreen">Portfolio</a>
+        <a href="#portfolio" class="btn btn--green">Portfolio</a>
         <a href="#about" class="btn btn--lightgreen">About Me</a>
       </div>
     </div>
@@ -49,23 +49,101 @@
       <div class="about__content">
         <h1>About Me</h1>
         <div class="flow-content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla libero natus, accusantium necessitatibus fugit similique quo pariatur nisi nesciunt soluta consectetur quisquam dolor voluptate magni, reprehenderit veniam, accusamus modi animi impedit architecto enim commodi tempore cum? Beatae mollitia nulla et nobis repudiandae deleniti, dolor laboriosam ex suscipit numquam nesciunt odio dolorum necessitatibus animi. Odio fuga, et deleniti eligendi ipsam perspiciatis?</p>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi facilis corporis deleniti illum voluptates reiciendis tempora ullam reprehenderit inventore commodi et quisquam dignissimos, culpa perferendis natus, quod fugiat distinctio amet.</p>
+          <p>I’m a 23-year-old journalist and young professional born in San Francisco and raised in Sonoma County. I chose to stay in the Bay Area and attend UC Berkeley because I am passionate about the challenges and triumphs of the area, and have a strong desire to write about them.</p>
+          <p>I have written for the Daily Californian at UC Berkeley and Oak Leaf News at the Santa Rosa Junior College. I have also worked as a freelance contributor for the Sacramento Bee. I am currently looking to work in both print and audio journalism.</p>
+          <p>When I am not writing I enjoy trying new cuisines, making jewelry, traveling, hiking, and chatting it up with new people.</p>
         </div>
         <div class="contact flex">
-          <a href="" data-contact="linkedin">Linkedin</a>
-          <a href="" data-contact="resume">Resume</a>
-          <p data-contact="email">rileyanne@berkeley.edu</p>
+          <a href="https://www.linkedin.com/in/riley-palmer-967508193/" data-contact="linkedin" target="_blank">Linkedin</a>
+          <a href="" data-contact="resume" target="_blank">Resume</a>
+          <p data-contact="email">rileyann99@berkeley.edu</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Portfolio -->
-  <section id="portfolio" class="portfolio" data-section="portfolio-tab">
+  <section id="portfolio" class="portfolio wrapper" data-section="portfolio-tab">
+    <div class="portfolio__header">
+      <h1>Portfolio</h1>
+    </div>
+    <div href="" class="card flex">
+      <img src="https://unsplash.it/800/603" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
+    <div href="" class="card flex">
+      <img src="https://unsplash.it/800/602" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
+    <div href="" class="card right flex">
+      <img src="https://unsplash.it/800/601" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
+    <div href="" class="card flex">
+      <img src="https://unsplash.it/800/605" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
+    <div href="" class="card flex">
+      <img src="https://unsplash.it/800/600" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
+    <div href="" class="card flex">
+      <img src="https://unsplash.it/800/604" alt="" class="card__image">
+      <div class="card__content flow-content">
+        <div class="flex">
+          <h4 class="publication">The Oakleaf</h4>
+          <p class="date">Nov 11th 2021</p>
+        </div>
+        <h3 class="title">Some Title That is Very Cool</h3>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non suscipit magna interdum eu. Curabitur pellentesque nibh nibh, at maximus ante.</p>
+        <a href="" class="btn btn--darkgreen">Go to article</a>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer></footer>
+  <footer>
+    <p>Copyright @ Riley Palmer 2022</p>
+  </footer>
 </body>
 </html>
