--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- About -->
   <section id="about" class="about flex wrapper" data-section="about-tab">
     <div class="about__container">
-      <img src="images/hero-img.jpg" alt="Riley Palmer" class="about__image">
+      <img loading="lazy" src="images/hero-img.jpg" alt="Riley Palmer" class="about__image">
       <div class="about__content">
         <h1>About Me</h1>
         <div class="flow-content">
@@ -68,7 +68,7 @@
       <h1>Portfolio</h1>
     </div>
     <div href="" class="card flex">
-      <img src="https://unsplash.it/800/603" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/603" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
@@ -80,7 +80,7 @@
       </div>
     </div>
     <div href="" class="card flex">
-      <img src="https://unsplash.it/800/602" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/602" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div href="" class="card right flex">
-      <img src="https://unsplash.it/800/601" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/601" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
@@ -104,7 +104,7 @@
       </div>
     </div>
     <div href="" class="card flex">
-      <img src="https://unsplash.it/800/605" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/605" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
@@ -116,7 +116,7 @@
       </div>
     </div>
     <div href="" class="card flex">
-      <img src="https://unsplash.it/800/600" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/600" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
@@ -128,7 +128,7 @@
       </div>
     </div>
     <div href="" class="card flex">
-      <img src="https://unsplash.it/800/604" alt="" class="card__image">
+      <img loading="lazy" src="https://unsplash.it/800/604" alt="" class="card__image">
       <div class="card__content flow-content">
         <div class="flex">
           <h4 class="publication">The Oakleaf</h4>
