Added resume to about section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="contact flex">
           <a href="https://www.linkedin.com/in/riley-palmer-967508193/" data-contact="linkedin" target="_blank">Linkedin</a>
-          <a href="" data-contact="resume" target="_blank">Resume</a>
+          <a href="./resources/Riley-Palmer-Journalism-Resume.pdf" data-contact="resume" target="_blank">Resume</a>
           <p data-contact="email">rileyann99@berkeley.edu</p>
         </div>
       </div>
