--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Roberto Jose Cardenas Esparza">
+  <meta name="description" content="Riley Palmer's Writing Portfolio. Riley is a journalist currently completing an internship at KQED.">
   <link rel="shortcut icon" href="./favicon.ico?" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
