Updated pictures for web

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="card left">
-      <img loading="lazy" src="images/Femalecomedianprofile.png" alt="" class="card__image">
+      <img loading="lazy" src="images/Femalecomedianprofile.jpg" alt="" class="card__image">
       <div class="card__content flex">
         <div class="card__text flow-content">
           <div class="flex">
@@ -136,7 +136,7 @@
     </div>
 
     <div class="card">
-      <img loading="lazy" src="images/Lockdown.png" alt="" class="card__image">
+      <img loading="lazy" src="images/Lockdown.jpg" alt="" class="card__image">
       <div class="card__content flex">
         <div class="card__text flow-content">
           <div class="flex">
@@ -151,7 +151,7 @@
     </div>
 
     <div class="card">
-      <img loading="lazy" src="images/Collegesurvivalguide.jpeg" alt="" class="card__image">
+      <img loading="lazy" src="images/Collegesurvivalguide.jpg" alt="" class="card__image">
       <div class="card__content flex">
         <div class="card__text flow-content">
           <div class="flex">
@@ -182,7 +182,7 @@
     </div>
 
     <div class="card left">
-      <img loading="lazy" src="images/sac-bee.JPG" alt="" class="card__image">
+      <img loading="lazy" src="images/sac-bee.jpg" alt="" class="card__image">
       <div class="card__content flex">
         <div class="card__text flow-content">
           <div class="flex">
